Check for and handle item production triggers.

--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -55,7 +55,7 @@
         <input type="text"
                id="travel-group"
                name="travel_group"
-               value="{{ current.travel_group }}"> <span class="label-like">For multiple companions</span>
+               value="{{ current.travel_group }}"> <span class="label-like">for multiple companions</span>
         <br>
         <div id="attrib-container" class="outer-border">
             <table id="attrib-table" style="display: none;">
