Keep game data in dicts and only load IDs if not already loaded. Set cached number_format when loading data. Don't exceed byproduct limit.

--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -296,6 +296,8 @@
                     </select>
                 `;
             }
+
+            // see addAttrib() for attribs of this item
             function addRecipeAttrib(recipeId, attribId, attribName, isBinary, enumVals, valMin = '1', valMax = '', showMax = true) {
                 console.log(`addRecipeAttrib() ${attribId}`);
                 const recipeContainer = $('.recipe-container').last();
@@ -537,6 +539,7 @@
                 addRecipe();
             });
 
+            // attrib of the item (not recipe requirement -- see addRecipeAttrib() for that)
             function addAttrib(attribId, attribName, isBinary, enumVals, attribVal = 1) {
                 const uniqueId = `attrib${attribId}`;
                 const attribHtml = `
