--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -23,19 +23,19 @@
             });
         });
     </script>
-    <h1>{{ current.title }}</h1>
-    <p>{{ current.description|htmlify }}</p>
+    <h1>{{ current_data.overall.title }}</h1>
+    <p>{{ current_data.overall.description|htmlify }}</p>
     <div class="column-container">
         <div><!-- lefthand column -->
             <!-- Top-level Events -->
-            {% if active.events %}
+            {% if current_data.events %}
                 <div class="popup-button" style="margin-bottom: 20px">
                     <button>
                         Events <span class="dropdown-icon">▼</span>
                     </button>
                     <div class="popup-frame">
                         <div class="popup-list">
-                            {% for event in active.events %}
+                            {% for event in current_data.events %}
                                 <a href="{{ url_for('play_event', event_id=event.id) }}">{{ event.name }}</a>
                             {% endfor %}
                         </div>
@@ -43,13 +43,13 @@
                 </div>
             {% endif %}
             <!-- Top-level Characters and their Location -->
-            {% if active.characters %}
+            {% if current_data.characters %}
                 <table class="spacious">
                     <tr>
                         <th>Character</th>
                         <th>At</th>
                     </tr>
-                    {% for char in active.characters %}
+                    {% for char in current_data.characters %}
                         <tr>
                             <td>
                                 {% if char.char_id %}
@@ -74,12 +74,12 @@
                 </table>
             {% endif %}
             <!-- Top-level Locations -->
-            {% if active.locations %}
+            {% if current_data.locations %}
                 <table class="spacious">
                     <tr>
                         <th>Locations</th>
                     </tr>
-                    {% for loc in active.locations %}
+                    {% for loc in current_data.locations %}
                         {% set link = url_for('play_location', loc_id=loc.id) %}
                         {% set letter = link_letters.next(link) %}
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
@@ -93,14 +93,14 @@
                 </table>
             {% endif %}
             <!-- Items in General Storage -->
-            {% if active.items %}
+            {% if current_data.items %}
                 <table class="spacious">
                     <tr>
                         <th>General Storage</th>
                         <th>Quantity</th>
                         <th>Attributes</th>
                     </tr>
-                    {% for item in active.items %}
+                    {% for item in current_data.items %}
                         {% set link = url_for('play_item', item_id=item.id, main='universal') %}
                         {% set letter = link_letters.next(link) %}
                         <script>linkForKey['{{ letter }}'] = "{{ link }}";</script>
